--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Kanit&display=swap"
       rel="stylesheet"
     />
-    <link id="favicon" rel="icon" href="/favicon-light.ico" />
+    <link id="favicon" rel="icon" href="/public/favicon-light.ico" />
     <title>Marc's Portfolio</title>
   </head>
   <body>
